--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Omar Khaled Mohamed <omar1752003@gmail.com>
+Youssef Charif Hamidi <youssef.charif.h@gmail.com>
